@@ -74,3 +74,10 @@ Gets the resolution, in dpi, of the backend.
 =cut
 gdouble
 clutter_backend_get_resolution (ClutterBackend *backend)
+
+const cairo_font_options_t *
+clutter_backend_get_font_options (ClutterBackend *backend)
+
+void
+clutter_backend_set_font_options (ClutterBackend *backend, cairo_font_options_t_ornull *options)
+
